--- a/www/templates/boardroom.html
+++ b/www/templates/boardroom.html
@@ -1,4 +1,4 @@
-<ion-view view-title="The Boardroom">
+<ion-view view-title="THE BOARDROOM">
   <ion-content id="boardroom_bg" class="screen-calm">
       <div class="exclaim">
           <i class="icon ion-coffee placeholder-icon custom-icon-chat"></i><br />Choose your region<br />Chat to other surfers nearby!
@@ -13,11 +13,11 @@
         <ion-item ng-click="gochat('{{service.user.username}}')">
             Western Cape<span> - 94 USERS ONLINE</span>
         </ion-item>
-    </ion-list>  
+    </ion-list>
       <div class="row">
           <div class="col"></div>
           <div class="col"><br /><br /><br /><img src="http://www.sunsetsurf.co.za/img/gonesurfing.png" width="100%" /></div>
           <div class="col"></div>
-      </div>   
+      </div>
   </ion-content>
 </ion-view>
