--- a/www/templates/cam.html
+++ b/www/templates/cam.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
     <ion-header-bar class="bar-new">
-        <h1 class="title">Webcam</h1>
+        <h1 class="title">WEBCAM</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeCam()">Close</button>
         </div>
