--- a/www/templates/chats.html
+++ b/www/templates/chats.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Chats">
-    <ion-content class="screen-calm">      
+<ion-view view-title="CHATS">
+    <ion-content class="screen-calm">
         <ion-list>
                 <div class="item item-input-inset">
                     <label class="item-input-wrapper">
