--- a/www/templates/email.html
+++ b/www/templates/email.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
     <ion-header-bar class="bar-new">
-        <h1 class="title">Change Email</h1>
+        <h1 class="title">CHANGE EMAIL</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeEmail()">Cancel</button>
         </div>
@@ -14,7 +14,7 @@
                 </label>
                 <label class="item">
                     <button ng-controller="EmailCtrl" class="button button-block button-calm" ng-click="updateEmail()">Update</button>
-                </label> 
+                </label>
             </div>
             <div class="row">
                 <div class="col"></div>
