--- a/www/templates/favourites.html
+++ b/www/templates/favourites.html
@@ -1,7 +1,7 @@
-<ion-view view-title="My Spots">
+<ion-view view-title="MY SPOTS">
     <ion-content id="main_bg" class="screen-calm">
         <div class="exclaim">
-            <i class="icon ion-android-favorite placeholder-icon custom-icon-fav"></i><br />All my favourite spots! 
+            <i class="icon ion-android-favorite placeholder-icon custom-icon-fav"></i><br />All my favourite spots!
         </div><br />
         <ion-list>
             <ion-item ng-repeat="spot in spots" href="#/app/spots/{{spot.id}}">
