--- a/www/templates/fullreport.html
+++ b/www/templates/fullreport.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
     <ion-header-bar class="bar-new">
-        <h1 class="title">Full Forecast</h1>
+        <h1 class="title">FULL FORECAST</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeFullReport()"><i class="icon ion-close-round placeholder-icon custom-icon-close"></i></button>
         </div>
