--- a/www/templates/inchat.html
+++ b/www/templates/inchat.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Boardroom">
+<ion-view view-title="BOARDROOM">
 
     <ion-content id="boardroom_bg" has-bouncing="true" class="has-header has-footer screen-calm" delegate-handle="mainScroll">
         <ion-list class="list">
