--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
     <ion-header-bar class="bar-new">
-        <h1 class="title">Sign in</h1>
+        <h1 class="title">SIGN IN</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeLogin()"><i class="icon ion-close-round placeholder-icon custom-icon-close"></i></button>
         </div>
@@ -22,9 +22,9 @@
                 </label>
                 <div class="exclaim3">
                 Don't have an account?
-                </div><br /> 
-                <label class="item">      
-                    <button ng-controller="SignupCtrl" class="button button-block button-balanced" ng-click="signup()">CREATE ACOUNT</button>        
+                </div><br />
+                <label class="item">
+                    <button ng-controller="SignupCtrl" class="button button-block button-balanced" ng-click="signup()">CREATE ACOUNT</button>
                 </label>
             </div>
         </form>
