--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -39,43 +39,43 @@
                 </ion-item> -->
                 <ion-item class="menu-reg" menu-close href="#/app/regions">
                     <i class="icon ion-earth placeholder-icon custom-icon-reg"></i>
-                    Regions
+                        REGIONS
                 </ion-item>
-                <ion-item menu-close href="#/app/favourites" ng-show="isLoggedIn">
+                <ion-item class="menu-reg" menu-close href="#/app/favourites" ng-show="isLoggedIn">
                     <i class="icon ion-android-favorite placeholder-icon custom-icon-fav"></i>
-                    My Spots
+                    MY SPOTS
                 </ion-item>
-                <ion-item menu-close ng-click="login()" ng-show="!isLoggedIn">
+                <ion-item class="menu-reg" menu-close ng-click="login()" ng-show="!isLoggedIn">
                     <i class="icon ion-android-favorite placeholder-icon custom-icon-fav"></i>
-                    My Spots
+                    MY SPOTS
                 </ion-item>
-                <ion-item menu-close href="#/app/boardroom" ng-show="isLoggedIn">
+                <ion-item class="menu-reg" menu-close href="#/app/boardroom" ng-show="isLoggedIn">
                     <i class="icon ion-coffee placeholder-icon custom-icon-chat"></i>
-                    The Boardroom
+                    THE BOARDROOM
                 </ion-item>
-                <ion-item menu-close ng-click="login()" ng-show="!isLoggedIn">
+                <ion-item class="menu-reg" menu-close ng-click="login()" ng-show="!isLoggedIn">
                     <i class="icon ion-coffee placeholder-icon custom-icon-chat"></i>
-                    The Boardroom
+                    THE BOARDROOM
                 </ion-item>
                 <!--<ion-item menu-close href="#/app/chats" ng-show="isLoggedIn">
                     <i class="icon ion-chatbubbles placeholder-icon custom-icon-chat"></i>
                     Chats
                 </ion-item>-->
-                <ion-item menu-close href="#/app/settings" ng-show="isLoggedIn">
+                <ion-item class="menu-reg" menu-close href="#/app/settings" ng-show="isLoggedIn">
                     <i class="icon ion-gear-a placeholder-icon custom-icon-setmenu"></i>
-                    Settings
+                    SETTINGS
                 </ion-item>
-                <ion-item menu-close ng-click="login()" ng-show="!isLoggedIn">
+                <ion-item class="menu-reg" menu-close ng-click="login()" ng-show="!isLoggedIn">
                     <i class="icon ion-gear-a placeholder-icon custom-icon-setmenu"></i>
-                    Settings
+                    SETTINGS
                 </ion-item>
-                <ion-item nav-clear menu-close ng-click="login()" ng-show="!isLoggedIn" style="width: 100%;">
+                <ion-item class="menu-reg" nav-clear menu-close ng-click="login()" ng-show="!isLoggedIn" style="width: 100%;">
                     <i class="icon ion-checkmark-circled placeholder-icon custom-icon"></i>
-                    Sign in
+                    SIGN IN
                 </ion-item>
-                <ion-item nav-clear menu-close ng-click="logout()" ng-show="isLoggedIn" href="#/app/regions" style="width: 100%;">
+                <ion-item class="menu-reg"nav-clear menu-close ng-click="logout()" ng-show="isLoggedIn" href="#/app/regions" style="width: 100%;">
                     <i class="icon ion-close-circled placeholder-icon custom-icon"></i>
-                    Sign out
+                    SIGN OUT
                 </ion-item>
             </ion-list>
             <br />
