--- a/www/templates/myprofile.html
+++ b/www/templates/myprofile.html
@@ -1,4 +1,4 @@
-<ion-view view-title="My Profile">
+<ion-view view-title="MY PROFILE">
     <ion-content class="screen-calm">
         <ion-list>
             <div class="row">
@@ -22,7 +22,7 @@
                 <div class="col"></div>
                 <div class="exclaim" style="font-weight: bold;">
                     <i class="icon ion-android-mail placeholder-icon custom-icon"></i>&nbsp;{{service.user.email}}
-                </div>                
+                </div>
                 <div class="col"></div>
                 <div class="col"></div>
             </div>
@@ -35,8 +35,8 @@
                 <div class="col"></div>
                 <div class="col"></div>
             </div>
-			 
-            <br />            
-        </ion-list> 
+
+            <br />
+        </ion-list>
     </ion-content>
 </ion-view>
