--- a/www/templates/pass.html
+++ b/www/templates/pass.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
     <ion-header-bar class="bar-new">
-        <h1 class="title">Change Password</h1>
+        <h1 class="title">CHANGE PASSWORD</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closePassword()">Cancel</button>
         </div>
@@ -22,7 +22,7 @@
                 </label>
                 <label class="item">
                     <button class="button button-block button-calm" ng-click="updatePassword()">Update</button>
-                </label> 
+                </label>
             </div>
             <div class="row">
                 <div class="col"></div>
