--- a/www/templates/regions.html
+++ b/www/templates/regions.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Wavey">
+<ion-view view-title="WAVEY">
   <ion-content id="main_bg" class="screen-calm">
       <div class="exclaim">
           <i class="icon ion-earth placeholder-icon custom-icon-reg"></i><br />Select your region to view spots!
