--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Settings">
+<ion-view view-title="SETTINGS">
     <ion-content id="settings_bg" class="screen-calm">
         <ion-list>
             <!--<div class="row">
@@ -52,6 +52,6 @@
                 <i class="icon ion-key placeholder-icon custom-icon"></i>
                 Change password
             </ion-item>
-        </ion-list>        
+        </ion-list>
     </ion-content>
 </ion-view>
