--- a/www/templates/addspot.html
+++ b/www/templates/addspot.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
     <ion-header-bar class="bar-new">
-        <h1 class="bar-new title">Add a new spot</h1>
+        <h1 class="bar-new title">ADD NEW SPOT</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeAddSpot()"><i class="icon ion-close-round placeholder-icon custom-icon-close"></i></button>
         </div>
