--- a/www/templates/region.html
+++ b/www/templates/region.html
@@ -1,4 +1,4 @@
-<ion-view view-title="<span>{{region.name}}, <span>{{region.country | uppercase}}</span></span>">
+<ion-view view-title="<span>{{region.name | uppercase}}, <span>{{region.country | uppercase}}</span></span>">
     <ion-content id="main_bg" class="screen-calm">
         <div class="exclaim">
             <i class="icon ion-flag placeholder-icon custom-icon-rego"></i><br />Choose your spot
