--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
     <ion-header-bar class="bar-new">
-        <h1 class="bar-new title">Report Issue</h1>
+        <h1 class="bar-new title">REPORT ISSUE</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeReport()"><i class="icon ion-close-round placeholder-icon custom-icon-close"></i></button>
         </div>
