--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -1,4 +1,4 @@
-<ion-view view-title="How's it looking?">
+<ion-view view-title="CURRENT CONDITIONS">
     <ion-content id="main_bg" class="screen-calm">
         <div class="item item-divider">
             <div class="col spot">&nbsp;&nbsp;{{spot.name}}<span> {{spot.regionName | uppercase}}</span>&nbsp;&nbsp;<i ng-click="toggleFavourite()" class="icon ion-android-favorite placeholder-icon fav-spot" ng-class="isFavourited ? 'custom-icon-fav' : ''"></i></div>
