--- a/www/templates/boardroom.html
+++ b/www/templates/boardroom.html
@@ -5,13 +5,13 @@
       </div><br />
     <ion-list>
         <ion-item ng-click="gochat('{{service.user.username}}')">
-            Eastern Cape<span> - 50 USERS ONLINE</span>
+            Eastern Cape<span> <i class="icon ion-chevron-right placeholder-icon custom-icon-fav"></i> 50 USERS ONLINE</span>
         </ion-item>
         <ion-item ng-click="gochat('{{service.user.username}}')">
-            KwaZulu Natal<span> - 145 USERS ONLINE</span>
+            KwaZulu Natal<span> <i class="icon ion-chevron-right placeholder-icon custom-icon-fav"></i> 145 USERS ONLINE</span>
         </ion-item>
         <ion-item ng-click="gochat('{{service.user.username}}')">
-            Western Cape<span> - 94 USERS ONLINE</span>
+            Western Cape<span> <i class="icon ion-chevron-right placeholder-icon custom-icon-fav"></i> 94 USERS ONLINE</span>
         </ion-item>
     </ion-list>
       <div class="row">
