--- a/www/templates/region.html
+++ b/www/templates/region.html
@@ -1,11 +1,11 @@
 <ion-view view-title="<span>{{region.name | uppercase}}, <span>{{region.country | uppercase}}</span></span>">
-    <ion-content id="main_bg" class="screen-calm">
+    <ion-content has-bouncing="true" id="main_bg" class="screen-calm">
         <div class="exclaim">
             <i class="icon ion-flag placeholder-icon custom-icon-rego"></i><br />Choose your spot
         </div><br />
         <ion-list>
             <ion-item ng-repeat="spot in spots" href="#/app/spots/{{spot.id}}">
-                {{spot.name}}
+                {{spot.name}} <i class="icon ion-chevron-right placeholder-icon custom-icon-fav"></i>
             </ion-item>
         </ion-list>
         <br />
