--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -75,7 +75,7 @@
                     <i class="icon ion-camera custom-icon-cam"></i>
                     Webcam
                 </a>
-                <a class="tab-item" ng-controller="FullReportCtrl" ng-click="fullReport()">
+                <a class="tab-item" ng-click="fullReport()">
                     <i class="icon ion-podium custom-icon-for"></i>
                     Full forecast
                 </a>
