--- a/www/templates/addspot.html
+++ b/www/templates/addspot.html
@@ -7,19 +7,19 @@
     </ion-header-bar>
     <ion-content id="settings_bg" class="screen-calm">
         <div class="exclaim">
-            <i class="icon ion-happy-outline placeholder-icon custom-icon-rego"></i><br />Send us a request to add your spot
+           Send us a request to add your spot
         </div><br />
         <form ng-submit="doAddSpot()">
             <div class="list">
-                <label class="item item-input ocean">
+                <label class="item item-input sky">
                     <span class="input-label">Spot Name</span>
                     <input type="text" ng-model="data.spotName">
                 </label>
-                <label class="item item-input ocean">
+                <label class="item item-input sky">
                     <span class="input-label">Region</span>
                     <input type="text" ng-model="data.region">
                 </label>
-                <label class="item item-input ocean">
+                <label class="item item-input sky">
                     <span class="input-label">Country</span>
                     <input type="text" ng-model="data.country">
                 </label>
