--- a/www/templates/boardroom.html
+++ b/www/templates/boardroom.html
@@ -1,22 +1,22 @@
 <ion-view view-title="THE BOARDROOM">
   <ion-content id="boardroom_bg" class="screen-calm">
       <div class="exclaim">
-          <i class="icon ion-coffee placeholder-icon custom-icon-chat"></i><br />Choose your region<br />Chat to other surfers nearby!
+          <i class="icon ion-coffee placeholder-icon custom-icon-chat"></i><br /><br />Choose your area<br />Chat to other surfers nearby
       </div><br />
     <ion-list>
         <ion-item ng-click="gochat('{{service.user.username}}')">
-            Eastern Cape<span> <i class="icon ion-chevron-right placeholder-icon custom-icon-fav"></i> 50 USERS ONLINE</span>
+            Eastern Cape, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
         <ion-item ng-click="gochat('{{service.user.username}}')">
-            KwaZulu Natal<span> <i class="icon ion-chevron-right placeholder-icon custom-icon-fav"></i> 145 USERS ONLINE</span>
+            KwaZulu Natal, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
         <ion-item ng-click="gochat('{{service.user.username}}')">
-            Western Cape<span> <i class="icon ion-chevron-right placeholder-icon custom-icon-fav"></i> 94 USERS ONLINE</span>
+            Western Cape, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
     </ion-list>
       <div class="row">
           <div class="col"></div>
-          <div class="col"><br /><br /><br /><img src="http://www.sunsetsurf.co.za/img/gonesurfing.png" width="100%" /></div>
+          <div class="col"><br /><br /><br /><img src="img/logo.png" width="100%" /></div>
           <div class="col"></div>
       </div>
   </ion-content>
