--- a/www/templates/favourites.html
+++ b/www/templates/favourites.html
@@ -1,11 +1,11 @@
 <ion-view view-title="MY SPOTS">
     <ion-content id="main_bg" class="screen-calm">
         <div class="exclaim">
-            <i class="icon ion-android-favorite placeholder-icon custom-icon-fav"></i><br />All my favourite spots!
+            <i class="icon ion-android-favorite placeholder-icon custom-icon-fav"></i><br /><br />Your favourites. In one place.
         </div><br />
         <ion-list>
             <ion-item ng-repeat="spot in spots" href="#/app/spots/{{spot.id}}">
-                {{spot.name}}
+                {{spot.name}} <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
             </ion-item>
         </ion-list>
     </ion-content>
