--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -19,12 +19,14 @@
                 </label>
                 <label class="item">
                     <button ng-controller="LoginCtrl" class="button button-block button-calm" ng-click="login()">SIGN IN</button>
+                    <button ng-controller="LoginCtrl" class="button icon-left ion-social-facebook button-block" style="background-color: #3b5998; color: #FFF; border: none; width: 100% !important" ng-click="loginWithFacebook()">SIGN IN WITH FACEBOOK</button>
+
                 </label>
                 <div class="exclaim3">
                 Don't have an account?
                 </div><br />
                 <label class="item">
-                    <button ng-controller="SignupCtrl" class="button button-block button-balanced" ng-click="signup()">CREATE ACOUNT</button>
+                    <button ng-controller="SignupCtrl" class="button button-block button-balanced" ng-click="signup()">CREATE ONE</button>
                 </label>
             </div>
         </form>
