--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -38,23 +38,23 @@
                     Logout
                 </ion-item> -->
                 <ion-item class="menu-reg" menu-close href="#/app/regions">
-                    <i class="icon ion-earth placeholder-icon custom-icon-reg"></i>
-                        REGIONS
+                    <i class="icon ion-earth placeholder-icon custom-icon-regmenu"></i>
+                        SURF REPORTS
                 </ion-item>
                 <ion-item class="menu-reg" menu-close href="#/app/favourites" ng-show="isLoggedIn">
-                    <i class="icon ion-android-favorite placeholder-icon custom-icon-fav"></i>
+                    <i class="icon ion-android-favorite placeholder-icon custom-icon-favmenu"></i>
                     MY SPOTS
                 </ion-item>
                 <ion-item class="menu-reg" menu-close ng-click="login()" ng-show="!isLoggedIn">
-                    <i class="icon ion-android-favorite placeholder-icon custom-icon-fav"></i>
+                    <i class="icon ion-android-favorite placeholder-icon custom-icon-favmenu"></i>
                     MY SPOTS
                 </ion-item>
                 <ion-item class="menu-reg" menu-close href="#/app/boardroom" ng-show="isLoggedIn">
-                    <i class="icon ion-coffee placeholder-icon custom-icon-chat"></i>
+                    <i class="icon ion-coffee placeholder-icon custom-icon-chatmenu"></i>
                     THE BOARDROOM
                 </ion-item>
                 <ion-item class="menu-reg" menu-close ng-click="login()" ng-show="!isLoggedIn">
-                    <i class="icon ion-coffee placeholder-icon custom-icon-chat"></i>
+                    <i class="icon ion-coffee placeholder-icon custom-icon-chatmenu"></i>
                     THE BOARDROOM
                 </ion-item>
                 <!--<ion-item menu-close href="#/app/chats" ng-show="isLoggedIn">
@@ -70,11 +70,11 @@
                     SETTINGS
                 </ion-item>
                 <ion-item class="menu-reg" nav-clear menu-close ng-click="login()" ng-show="!isLoggedIn" style="width: 100%;">
-                    <i class="icon ion-checkmark-circled placeholder-icon custom-icon"></i>
+                    <i class="icon ion-checkmark-circled placeholder-icon custom-icon-log"></i>
                     SIGN IN
                 </ion-item>
                 <ion-item class="menu-reg"nav-clear menu-close ng-click="logout()" ng-show="isLoggedIn" href="#/app/regions" style="width: 100%;">
-                    <i class="icon ion-close-circled placeholder-icon custom-icon"></i>
+                    <i class="icon ion-close-circled placeholder-icon custom-icon-log"></i>
                     SIGN OUT
                 </ion-item>
             </ion-list>
