--- a/www/templates/region.html
+++ b/www/templates/region.html
@@ -1,11 +1,12 @@
 <ion-view view-title="<span>{{region.name | uppercase}}, <span>{{region.country | uppercase}}</span></span>">
     <ion-content has-bouncing="true" id="main_bg" class="screen-calm">
         <div class="exclaim">
-            <i class="icon ion-flag placeholder-icon custom-icon-rego"></i><br />Choose your spot
+            <i class="icon ion-pin placeholder-icon custom-icon-rego"></i><br /><br />Choose your spot.<br /> View a <b>live report. </b><br />Check out the <b>5 day forecast.
+            </b><br /> Maybe even find a <b>webcam</b>
         </div><br />
         <ion-list>
             <ion-item ng-repeat="spot in spots" href="#/app/spots/{{spot.id}}">
-                {{spot.name}} <i class="icon ion-chevron-right placeholder-icon custom-icon-fav"></i>
+                {{spot.name}} <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
             </ion-item>
         </ion-list>
         <br />
