Remove "add spot" feature

--- a/www/templates/regions.html
+++ b/www/templates/regions.html
@@ -22,14 +22,11 @@
       </ion-list>
       </div>
       <div ng-show="isLoggedIn">
-          <div class="exclaim">
-              <i class="icon ion-heart-broken placeholder-icon custom-icon-fav"></i><br /><br />No report for your beach? No problem
-          </div><br />
-          <ion-list>
-              <ion-item ng-controller="AddSpotCtrl" ng-click="addspot()">
-                  <span>ADD NEW SPOT</span> <i class="icon ion-plus-round placeholder-icon custom-icon"></i>
-              </ion-item>
-          </ion-list>
+          <div class="row">
+              <div class="col"></div>
+            <div class="col"><br /><br /><br /><img src="img/logo.png" width="100"/></div>
+              <div class="col"></div>
+          </div>
       </div>
       <br />
       <br />
