--- a/www/templates/cam.html
+++ b/www/templates/cam.html
@@ -5,10 +5,10 @@
             <button class="button button-clear" ng-click="closeCam()">Close</button>
         </div>
     </ion-header-bar>
-    <ion-content id="settings_bg" class ="screen-calm">    
+    <ion-content id="settings_bg" class ="screen-calm">
         <div class="row">
             <div class="col"></div>
-            <div class="col-70 ocean"><span>Webcams proudly sponsored by</span></div>
+            <div class="col-70 sky"><span>Webcams proudly sponsored by</span></div>
             <div class="col"></div>
         </div>
         <div class="row">
