--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -71,13 +71,13 @@
                 </div>
             </div>
             <div class="item tabs tabs-secondary tabs-icon-left">
+                <a class="tab-item" ng-click="fullReport()">
+                    <i class="icon ion-help-buoy custom-icon-for"></i>
+                    Full forecast
+                </a>
                 <a class="tab-item" ng-controller="CamCtrl" ng-click="cam()">
                     <i class="icon ion-camera custom-icon-cam"></i>
                     Webcam
-                </a>
-                <a class="tab-item" ng-click="fullReport()">
-                    <i class="icon ion-podium custom-icon-for"></i>
-                    Full forecast
                 </a>
                 <!--<a class="tab-item" ng-controller="ReportCtrl" ng-click="report()">
                     <i class="icon ion-alert-circled custom-icon-rep"></i>
