--- a/www/css/style.css
+++ b/www/css/style.css
@@ -57,14 +57,14 @@ img.logo {
 }
 
 .custom-icon-for {
-  color : #009ec2;
+  color : #393939;
 }
 
 .custom-icon-rep {
   color : #393939;
 }
 
-custom-icon-forecast {
+.custom-icon-forecast {
   color : #009ec2;
 }
 
@@ -73,12 +73,12 @@ custom-icon-forecast {
 }
 
 .custom-icon-reg {
-  color : #393939;  
+  color : #393939;
   font-size: 50px;
 }
 
 .custom-icon-regmenu {
-  color : #393939;  
+  color : #393939;
 }
 
 .custom-icon-search {
