added room identifiers

--- a/www/templates/boardroom.html
+++ b/www/templates/boardroom.html
@@ -4,13 +4,13 @@
           <i class="icon ion-coffee placeholder-icon custom-icon-chat"></i><br /><br />Choose your area<br />Chat to other surfers nearby
       </div><br />
     <ion-list>
-        <ion-item ng-click="gochat('{{service.user.username}}')">
+        <ion-item ng-click="gochat('{{service.user.username}}', 'ECT')">
             Eastern Cape, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
-        <ion-item ng-click="gochat('{{service.user.username}}')">
+        <ion-item ng-click="gochat('{{service.user.username}}', 'KZN')">
             KwaZulu Natal, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
-        <ion-item ng-click="gochat('{{service.user.username}}')">
+        <ion-item ng-click="gochat('{{service.user.username}}', 'WCT')">
             Western Cape, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
     </ion-list>
